@@ -2,6 +2,7 @@
 v1.0.0-git
 ----------
 
+[rla] Use Horde 5's new button for the Add Stock menu entry
 
 
 ------------
